# tiny-learner

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  learner.py  loader.py  pyproject.toml  train_mnist_tinygrad.py
examples/: train_mnist.py
tests/: conftest.py  test_learner.py  test_loader.py
