[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-learner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11" # This matches tinygrad
dependencies = [
    "datasets>=4.5.0",
    "pillow>=12.1.0",
]

[tool.ruff]
line-length = 150
[tool.ruff.lint]
ignore = ["E701"]

[tool.setuptools]
py-modules = ["learner", "loader"]
